# aotrc

./: .gitignore  .gitmodules  .plzconfig  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  ROADMAP.md  TODO.md  dfa.dot  nfa.dot
.github/workflows/: cmake.yml  please.yml
bindings/: CMakeLists.txt
bindings/dync/: CMakeLists.txt  dynamic_binding.c  dynamic_binding.h
src/: BUILD.plz  CMakeLists.txt  args_parser.cc  args_parser.h  main.cc  main.cpp
src/compiler/: BUILD.plz  CMakeLists.txt  aotrc_compiler.cc  aotrc_compiler.h  build_pattern_func.cc  build_pattern_func.h  code_gen.cc  code_gen.h  compiler.cc  compiler.h  compiler_context.cc  compiler_context.h  dfa_compiler.cc  dfa_compiler.h  instruction.cc  instruction.h  instruction_translator.cc  instruction_translator.h  lib_linker.cc  lib_linker.h  linker.cc  linker.h  match_function.cc  match_function.h  match_function_state.cc  match_function_state.h  program.cc  program.h  program_info_provider.cc  program_info_provider.h  program_mode.cc  program_mode.h  program_state.cc  program_state.h  program_translator.cc  program_translator.h  regex_compiler.cc  regex_compiler.h  search_program.cc  search_program.h  (+6 more)
src/compiler/capture/: capture_dfa_compiler.cc  capture_dfa_compiler.h  capture_info_builder.cc  capture_info_builder.h  capture_program_info_provider.cc  capture_program_info_provider.h  capture_translator.cc  capture_translator.h
src/compiler/full_match/: full_match_dfa_compiler.cc  full_match_dfa_compiler.h  full_match_program_info_provider.cc  full_match_program_info_provider.h  full_match_translator.cc  full_match_translator.h
src/compiler/passes/: accept_to_store_loc_pass.cc  accept_to_store_loc_pass.h  flag_start_state_pass.cc  flag_start_state_pass.h  pass.cc  pass.h  reject_to_conditional.cc  reject_to_conditional.h  restart_pass.cc  restart_pass.h
src/compiler/searching/: search_dfa_compiler.cc  search_dfa_compiler.h  search_program_info_provider.cc  search_program_info_provider.h  search_translator.cc  search_translator.h
src/compiler/sub_match/: sub_match_dfa_compiler.cc  sub_match_dfa_compiler.h  sub_match_program_info_provider.cc  sub_match_program_info_provider.h
src/fa/: BUILD.plz  CMakeLists.txt  dfa.cc  dfa.h  graphviz_renderer.cc  graphviz_renderer.h  nfa.cc  nfa.h  nfa_builders.cc  nfa_builders.h  transition_edge.cc  transition_edge.h  transition_table.cc  transition_table.h
src/input/: BUILD.plz  CMakeLists.txt  aotrc_input_parser.cc  aotrc_input_parser.h
src/jit/: CMakeLists.txt  aotrc_jit_compiler.cc  aotrc_jit_compiler.h
src/parser/: BUILD.plz  CMakeLists.txt  re_grammar.yy  re_lexer.ll  re_parser_driver.cc  re_parser_driver.h  regex_parser.cc  regex_parser.h  regex_to_nfa.cc  regex_to_nfa.h
tests/: CMakeLists.txt  testing_regexes.yml
tests/integration/: BUILD.plz  CMakeLists.txt  correct_fullmatch_regexes_tests.cc  correct_match_regexes_test.cc  int_base_test.cc  int_base_test.h  test_alter.cc  test_cc.cc  test_literal.cc  test_neg_cc.cc  test_plus.cc  test_search.cc  test_star.cc  testing_regexes.yml
tests/jit/: CMakeLists.txt  jit_test_fullmatch.cc
tests/unit/: CMakeLists.txt
tests/unit/fa/: BUILD.plz  CMakeLists.txt  edge_test.cc  fa_alternation_literal.cc  fa_alternation_single.cc  fa_base_test.cc  fa_base_test.h  fa_character_class.cc  fa_character_class2.cc  fa_combo_one.cc  fa_combo_two.cc  fa_literal.cc  fa_literal_str.cc  fa_meta_chars.cc  fa_neg_cc.cc  fa_plus_literal.cc  fa_plus_single.cc  fa_star_literal.cc  fa_star_single.cc
tests/unit/parser/: BUILD.plz  CMakeLists.txt  parse_literal.cc  parse_numbers.cc  parse_quants.cc  parse_specials.cc
